dev/k8s/manifests/sentinel.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sentinel
