dev/k8s/manifests/sentinels.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sentinels
