dev/k8s/manifests/mysql.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: unkey
  labels:
    app: mysql
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      terminationGracePeriodSeconds: 60
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
      containers:
        - name: mysql
          image: vitess/vttestserver:v24.0.3-mysql80@sha256:230586284ba936139d0f9afb3e7ef8d2494e0fc752cc6ed3f243bcc5082ef485
          command: ["/vt/bin/vttestserver"]
          args:
            - "--port=33574"
            - "--keyspaces=unkey"
            - "--num_shards=1"
            - "--mysql_bind_host=0.0.0.0"
            - "--vtcombo-bind-host=0.0.0.0"
            - "--schema_dir=/schema"
            - "--persistent_mode"
            - "--data_dir=/vt/vtdataroot"
          ports:
            - name: mysql
              containerPort: 33577
            - name: vstream
              containerPort: 33575
          volumeMounts:
            - name: vitess-storage
              mountPath: /vt/vtdataroot
            - name: mysql-schema
              mountPath: /schema/unkey
              readOnly: true
          startupProbe:
            exec:
              command: [
                "mysql",
                "--protocol=tcp",
                "-h127.0.0.1",
                "-P33577",
                "-uunkey",
                "-ppassword",
                "unkey",
                "-e",
                "SELECT COUNT(*) FROM workspaces",
              ]
            periodSeconds: 1
            failureThreshold: 300
          readinessProbe:
            exec:
              command: [
                "mysql",
                "--protocol=tcp",
                "-h127.0.0.1",
                "-P33577",
                "-uunkey",
                "-ppassword",
                "unkey",
                "-e",
                "SELECT COUNT(*) FROM workspaces",
              ]
            timeoutSeconds: 5
            periodSeconds: 1
          livenessProbe:
            tcpSocket:
              port: mysql
            periodSeconds: 30
      volumes:
        - name: vitess-storage
          persistentVolumeClaim:
            claimName: vitess-pvc
        - name: mysql-schema
          configMap:
            name: mysql-schema

---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: unkey
  labels:
    app: mysql
spec:
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
      protocol: TCP
    - name: vstream
      port: 33575
      targetPort: vstream
      protocol: TCP
  type: LoadBalancer
