dev/k8s/manifests/restate.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: restate
  namespace: unkey
  labels:
    app: restate
spec:
  serviceName: "restate"
  replicas: 1 # Restate requires single-replica for development
  selector:
    matchLabels:
      app: restate
  template:
    metadata:
      labels:
        app: restate
    spec:
      containers:
        - name: restate
          image: docker.io/restatedev/restate:1.7.8@sha256:fe23d866cc625a745f73f14e05ee6ca5b26441af3b18df8c54dfda4e1bb1d52d
          ports:
            - containerPort: 8080
              name: frontline
            - containerPort: 9070
              name: admin
          volumeMounts:
            - name: restate-storage
              mountPath: /restate-data
          readinessProbe:
            httpGet:
              path: /health
              port: 9070
            periodSeconds: 1
          livenessProbe:
            httpGet:
              path: /health
              port: 9070
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: restate-storage
          persistentVolumeClaim:
            claimName: restate-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: restate
  namespace: unkey
  labels:
    app: restate
spec:
  selector:
    app: restate
  ports:
    - name: frontline
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: admin
      port: 9070
      targetPort: 9070
      protocol: TCP
  type: LoadBalancer
