dev/k8s/manifests/s3.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3
  namespace: unkey
  labels:
    app: s3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: s3
  template:
    metadata:
      labels:
        app: s3
    spec:
      containers:
        - name: garage
          image: dxflrs/garage:v2.3.0@sha256:866bd13ed2038ba7e7190e840482bc27234c4afaf77be8cfa439ae088c1e4690
          command: ["/garage"]
          args:
            - server
            - --single-node
            - --default-bucket
          ports:
            - containerPort: 3902
              name: api
            - containerPort: 3903
              name: admin
          volumeMounts:
            - name: s3-storage
              mountPath: /var/lib/garage
            - name: s3-config
              mountPath: /etc/garage.toml
              subPath: garage.toml
              readOnly: true
          readinessProbe:
            httpGet:
              path: /health
              port: 3903
            periodSeconds: 1
          livenessProbe:
            httpGet:
              path: /health
              port: 3903
            initialDelaySeconds: 30
            periodSeconds: 30
      volumes:
        - name: s3-storage
          persistentVolumeClaim:
            claimName: s3-pvc
        - name: s3-config
          configMap:
            name: s3-config
---
apiVersion: v1
kind: Service
metadata:
  name: s3
  namespace: unkey
  labels:
    app: s3
spec:
  selector:
    app: s3
  ports:
    - name: api
      port: 3902
      targetPort: 3902
      protocol: TCP
    - name: admin
      port: 3903
      targetPort: 3903
      protocol: TCP
  type: ClusterIP
