dev/k8s/manifests/storage-provisioner.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: k8s.io-minikube-hostpath
  namespace: kube-system
---
apiVersion: v1
kind: Pod
metadata:
  name: storage-provisioner
  namespace: kube-system
spec:
  serviceAccountName: storage-provisioner
  hostNetwork: true
  containers:
    - name: storage-provisioner
      image: gcr.io/k8s-minikube/storage-provisioner:v5
      command: ["/storage-provisioner"]
      imagePullPolicy: IfNotPresent
      volumeMounts:
        - mountPath: /tmp
          name: tmp
  volumes:
    - name: tmp
      hostPath:
        path: /tmp
        type: Directory
