dev/k8s/manifests/worker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: unkey
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      serviceAccountName: unkey-serviceaccount
      volumes:
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
            type: Socket
      containers:
        - name: worker
          image: unkey/go:latest
          args: ["run", "worker"]
          imagePullPolicy: Never # Use local images
          ports:
            - containerPort: 7092
            - containerPort: 9080
          volumeMounts:
            - name: docker-socket
              mountPath: /var/run/docker.sock
---
apiVersion: v1
kind: Service
metadata:
  name: worker
  namespace: unkey
  labels:
    app: worker
spec:
  selector:
    app: worker
  ports:
    - name: health
      port: 7092
      targetPort: 7092
      protocol: TCP
    - name: restate
      port: 9080
      targetPort: 9080
      protocol: TCP
  type: ClusterIP
